--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
 			"request": "launch",
 			"preLaunchTask": "build",
 			// If you have changed target frameworks, make sure to update the program path.
-			"program": "${workspaceFolder}/Tanuki/bin/Debug/net8.0/dotnetcore.dll",
+			"program": "${workspaceFolder}/Tanuki/bin/Debug/net8.0/Tanuki.dll",
 			"args": [],
 			"cwd": "${workspaceFolder}/Tanuki",
 			// For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
