--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -22,11 +22,14 @@ jobs:
         with:
           path: public
   deploy:
+    needs: build
+    permissions:
+      id-token: write
+      pages: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
