--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           dotnet run --project Tanuki -- transform Tanuki/TestFiles/projectauditor.json -o public.json
           dotnet run --project Tanuki -- merge Tanuki/TestFiles/a.json Tanuki/TestFiles/b.json public.json -o public.json
-          dotnet run --project Tanuki -- html public.json -o public/index.html --base-url "https://zensharp.github.io/tanuki"
+          dotnet run --project Tanuki -- html public.json -o public/index.html --base-url "https://github.com/zensharp/tanuki/blob/main"
       - name: Upload static files as artifact
         id: deployment
         uses: actions/upload-pages-artifact@v3
